# cppredicates

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  ReadMe.md
include/cppredicates/: Circle2D.hpp  Circle2D_T.hpp  Plane3D.hpp  Plane3D_T.hpp  Point2D.hpp  Point2D_T.hpp  Point3D.hpp  Point3D_T.hpp  Ray2D.hpp  Ray2D_T.hpp  Sphere.hpp  Sphere_T.hpp  cppredicates.hpp  typedefs.hpp
original/: CMakeLists.txt  predicates.h
src/: cppredicates.cpp
tests/: CMakeLists.txt  circle2d.cpp  cppredicates.cpp  main.cpp  original.cpp  plane3d.cpp  point2d.cpp  point3d.cpp  ray2d.cpp  sphere.cpp
